# pytspack

./: MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements-test.txt  setup.py
.github/workflows/: ci.yml
docs/: api.md  example.py  index.md  requirements.txt  usage.md
examples/: 01_tspack_1d_interpolation.py  02_vertical_interpolation.py  03_aero_viz.py  gfs_particle_simulation.py
pytspack/: __init__.py  common.c  common.h  pytspack.py  renka.py  srf_common.h  srfpack.c  srfpack.h  ssrfpack.c  ssrfpack.h  stripack.c  stripack.h  tripack.c  tripack.h  tspack.c  tspack.h  vertical.py
renka/: __init__.py  renka.py  utils.py  vertical.py
src/: pytspack.c  ssrfpack.c  ssrfpack.h  tspack.c  tspack.h
tests/: test_aero_validation.py  test_benchmark.py  test_dask.py  test_dask_xarray.py  test_new_api.py  test_pytspack.py  test_renka.py  test_spherical_mesh.py  test_tspack.py  test_utils.py  test_vertical.py
